[package]
name = "i-cant-believe-its-not-bsn"
authors = ["Alice I. Cecile"]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/Leafwing-Studios/i-cant-believe-its-not-bsn"
license = "MIT OR Apache-2.0"
description = "Tools for spawning entity hierarchies in Bevy"

[dependencies]
bevy_ecs = { version = "0.16.1", default-features = false }

[dev-dependencies]
bevy = { version = "0.16.1" }
